# FlyDSL

./: CLAUDE.md  CMakeLists.txt  README.md
.github/: runner-config.yml
.github/scripts/: list_jobs.py  query_job_status.py
.github/workflows/: amd-ci-job-monitor.yml  flydsl-atom-integration.yaml  flydsl-sglang-integration.yaml  flydsl-vllm-integration.yaml  test-whl.yaml
cmake/: FlyDSLBackends.cmake
cmake/backends/: rocdl.cmake
docs/: architecture_guide.md  arithmetic_types.md  conf.py  cute_layout_algebra_guide.md  index.rst  kernel_authoring_guide.md  kernel_tuning_guide.md  layout_system_guide.md  prebuilt_kernels_guide.md  testing_benchmarking_guide.md
docs/api/: dsl.rst  kernels.rst
docs/tutorials/: kernel_development.rst
examples/: 04-preshuffle_gemm.py  05-gather_scatter.py
include/flydsl-c/: FlyROCDLDialect.h
kernels/: __init__.py  conv3d_implicit_8wave_fp8.py  flash_attn_generic.py  flash_attn_gfx950.py  gemm_fp8fp4_gfx1250.py  pa_decode_fp8.py  pa_metadata.py  preshuffle_gemm.py
kernels/attention/: __init__.py  flash_attn_fp8_gfx950.py  flash_attn_generic.py  flash_attn_gfx950.py  flash_attn_interface.py  fused_rope_cache_kernel.py  mla_fwd_decode.py  mla_fwd_decode_m16x8_fp8_fp8.py  pa_common.py  pa_decode_fp8.py  pa_decode_swa.py  pa_metadata.py  qk_norm_rope_quant.py
kernels/comm/: __init__.py  custom_all_reduce.py  custom_all_reduce_kernel.py
kernels/common/: __init__.py  dpp_utils.py  kernels_common.py  utils.py  (+1 more)
lib/: CMakeLists.txt
scripts/: check_python_style.sh  run_benchmark.sh
tools/fly-opt/: CMakeLists.txt  fly-opt.cpp
(+122 files in other folders)
